...

              // Logout Button
              const Divider(),
              ListTile(
                leading: Icon(Icons.logout, color: theme.colorScheme.error),
                title: Text(
                  'Keluar',
                  style: TextStyle(color: theme.colorScheme.error),
                ),
                onTap: () {
                  Navigator.pop(context); // Close Drawer
                  context.read<AuthBloc>().add(const AuthLogoutRequested());
                },
...
