...
    final user = authState.user;

    return BlocProvider.value(
      value: _examListCubit,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Dashboard Siswa'),
        ),
        body: RefreshIndicator(
          onRefresh: () => _examListCubit.loadExams(user.uid),
          child: BlocBuilder<ExamListCubit, ExamListState>(
            builder: (context, state) {
              if (state is ExamListLoading) {
...
